package pt.ipp.isep.dei.esoft.project.domain;

public class ZipCode {
    private int local;
    private int street;

    public int getLocal() {
        return local;
    }

    public void setLocal(int local) {
        this.local = local;
    }

    public int getStreet() {
        return street;
    }

    public void setStreet(int street) {
        this.street = street;
    }


}